force-app/main/default/objects/USCDI__c/USCDI__c.object-meta.xml
<CustomObject>
    <label>USCDI v1</label>
    <nameField>
        <label>USC Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>USCDI v1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>