force-app/main/default/objects/USCDI__c/fields/BMI__c.field-meta.xml
<CustomField>
    <fullName>BMI__c</fullName>
    <description>~USCDI v1 CCDA - Pediatric Percentiles (NEW!)</description>
    <label>BMI (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>