force-app/main/default/objects/USCDI__c/fields/Body_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Body_Temperature__c</fullName>
    <description>~USCDI v1 CCDA - Additional Vitals (UPDATED!)</description>
    <label>Body Temperature</label>
    <type>TextArea</type>
</CustomField>