force-app/main/default/objects/USCDI__c/fields/Care_Plan_2_Goal__c.field-meta.xml
<CustomField>
    <fullName>Care_Plan_2_Goal__c</fullName>
    <description>~USCDI v1 CCDA - Care Plan Goals &amp; Instructions</description>
    <label>Care Plan 2 Goal</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Smoking Cessation</fullName>
            </value>
            <value>
                <fullName>Weight Loss</fullName>
            </value>
            <value>
                <fullName>Asthma Management</fullName>
            </value>
            <value>
                <fullName>Get an EKG done on 6/23/2015.</fullName>
            </value>
            <value>
                <fullName>Get a Chest X-ray done on 6/23/2015 showing the Lower Respiratory Tract Structure.</fullName>
            </value>
            <value>
                <fullName>Take Clindamycin 300mg three times a day as needed if pain does not subside/</fullName>
            </value>
            <value>
                <fullName>Schedule follow on visit with Neighborhood Physicians Practice on 7/1/2015.</fullName>
            </value>
            <value>
                <fullName>Get rid of intermittent fever that is occurring every few weeks.</fullName>
            </value>
            <value>
                <fullName>Need to gain more energy to do regular activities</fullName>
            </value>
            <value>
                <fullName>Schedule a visit for next year.</fullName>
            </value>
            <value>
                <fullName>Schedule after 1 week for followup</fullName>
            </value>
            <value>
                <fullName>Keep body temperature at 98-99F</fullName>
            </value>
            <value>
                <fullName>In case of high fever, take Tylenol as needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>