force-app/main/default/objects/USCDI__c/fields/Care_Plan_3__c.field-meta.xml
<CustomField>
    <fullName>Care_Plan_3__c</fullName>
    <description>~USCDI v1 CCDA - Care Plan (UPDATED!)</description>
    <label>Care Plan 3</label>
    <type>TextArea</type>
</CustomField>