force-app/main/default/objects/USCDI__c/fields/Care_Plan_3_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Care_Plan_3_Instructions__c</fullName>
    <description>~USCDI v1 CCDA - Care Plan Goals &amp; Instructions</description>
    <label>Care Plan 3 Instructions</label>
    <type>TextArea</type>
</CustomField>