force-app/main/default/objects/USCDI__c/fields/Care_Plan_Type_1__c.field-meta.xml
<CustomField>
    <fullName>Care_Plan_Type_1__c</fullName>
    <label>Care Plan Type 1</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plan</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Request</fullName>
            </value>
            <value>
                <fullName>Option</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>