force-app/main/default/objects/USCDI__c/fields/Care_Plan_Type_2__c.field-meta.xml
<CustomField>
    <fullName>Care_Plan_Type_2__c</fullName>
    <description>~USCDI v1 CCDA - Care Plan (UPDATED!)</description>
    <label>Care Plan Type 2</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plan</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Request</fullName>
            </value>
            <value>
                <fullName>Option</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>