force-app/main/default/objects/USCDI__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>USCDI v1</relationshipLabel>
    <relationshipName>USCDI_v1</relationshipName>
    <type>Lookup</type>
</CustomField>