force-app/main/default/objects/USCDI__c/fields/Consultation_Note_2__c.field-meta.xml
<CustomField>
    <fullName>Consultation_Note_2__c</fullName>
    <description>~USCDI v1 CCDA - Consultation Note</description>
    <label>Consultation Note 2</label>
    <type>TextArea</type>
</CustomField>