force-app/main/default/objects/USCDI__c/fields/Consultation_Note_Text_NEW__c.field-meta.xml
<CustomField>
    <fullName>Consultation_Note_Text_NEW__c</fullName>
    <description>~USCDI v1 CCDA - Consultation Note Text (NEW!)</description>
    <label>Consultation Note Text (NEW!)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>