force-app/main/default/objects/USCDI__c/fields/Diagnostic_Imaging_Narrative_2__c.field-meta.xml
<CustomField>
    <fullName>Diagnostic_Imaging_Narrative_2__c</fullName>
    <description>~USCDI v1 CCDA - Diagnostic Imaging Narrative (NEW!)</description>
    <label>Diagnostic Imaging Narrative 2</label>
    <type>TextArea</type>
</CustomField>