force-app/main/default/objects/USCDI__c/fields/Diagnostic_Imaging_Narrative_Note__c.field-meta.xml
<CustomField>
    <fullName>Diagnostic_Imaging_Narrative_Note__c</fullName>
    <description>~USCDI V1 CCDA - Diagnostic Imaging Narrative</description>
    <label>Diagnostic Imaging Narrative Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>