force-app/main/default/objects/USCDI__c/fields/Discharge_Summary_1__c.field-meta.xml
<CustomField>
    <fullName>Discharge_Summary_1__c</fullName>
    <description>~USCDI v1 CCDA - Discharge Summary (NEW!)</description>
    <label>Discharge Summary 1</label>
    <type>TextArea</type>
</CustomField>