force-app/main/default/objects/USCDI__c/fields/Discharge_Summary_Note_NEW__c.field-meta.xml
<CustomField>
    <fullName>Discharge_Summary_Note_NEW__c</fullName>
    <description>~USCDI v1 CCDA - Discharge Summary (Note) (NEW!)</description>
    <inlineHelpText>Enter Discharge Summary Notes Here</inlineHelpText>
    <label>Discharge Summary (Note) (NEW!)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>