force-app/main/default/objects/USCDI__c/fields/ECQM_Blood_Pressure_Systolic_mm_Hg__c.field-meta.xml
<CustomField>
    <fullName>ECQM_Blood_Pressure_Systolic_mm_Hg__c</fullName>
    <label>ECQM Blood Pressure Systolic mm[Hg]</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>