force-app/main/default/objects/USCDI__c/fields/ECQM_USCDI_v1_CCDA_Height_cm__c.field-meta.xml
<CustomField>
    <fullName>ECQM_USCDI_v1_CCDA_Height_cm__c</fullName>
    <label>ECQM~USCDI v1 CCDA  Height (cm)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>