force-app/main/default/objects/USCDI__c/fields/ECQM_USCDI_v1_CCDA_Height_ft__c.field-meta.xml
<CustomField>
    <fullName>ECQM_USCDI_v1_CCDA_Height_ft__c</fullName>
    <label>ECQM~USCDI v1 CCDA Height(ft)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>