force-app/main/default/objects/USCDI__c/fields/ECQM_USCDI_v1_CCDA_Weight_kg__c.field-meta.xml
<CustomField>
    <fullName>ECQM_USCDI_v1_CCDA_Weight_kg__c</fullName>
    <label>ECQM~USCDI v1 CCDA  Weight (kg)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>