force-app/main/default/objects/USCDI__c/fields/Functional_Status_3_Date__c.field-meta.xml
<CustomField>
    <fullName>Functional_Status_3_Date__c</fullName>
    <description>~USCDI v1 CCDA - Functional Status 2</description>
    <label>Functional Status 3 Date</label>
    <type>Date</type>
</CustomField>