force-app/main/default/objects/USCDI__c/fields/Functional_Status_3_Value__c.field-meta.xml
<CustomField>
    <fullName>Functional_Status_3_Value__c</fullName>
    <description>~USCDI v1 CCDA - Functional Status 2</description>
    <label>Functional Status 3 Value</label>
    <type>TextArea</type>
</CustomField>