force-app/main/default/objects/USCDI__c/fields/Functional_Status_Hearing__c.field-meta.xml
<CustomField>
    <fullName>Functional_Status_Hearing__c</fullName>
    <description>-USCDI v1 CCDA - Functional Status</description>
    <label>Functional Status Hearing</label>
    <type>Date</type>
</CustomField>