force-app/main/default/objects/USCDI__c/fields/Goal_Section_2_Author__c.field-meta.xml
<CustomField>
    <fullName>Goal_Section_2_Author__c</fullName>
    <label>Goal Section 2 Author</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Provider</fullName>
            </value>
            <value>
                <fullName>Patient</fullName>
            </value>
            <value>
                <fullName>Patient and Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>