force-app/main/default/objects/USCDI__c/fields/Goal_Section_2_Value__c.field-meta.xml
<CustomField>
    <fullName>Goal_Section_2_Value__c</fullName>
    <description>~USCDI v1 CCDA - Goals Section (UPDATED!)</description>
    <label>Goal Section 2 Value</label>
    <type>TextArea</type>
</CustomField>