force-app/main/default/objects/USCDI__c/fields/Goal_Section_3_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Goal_Section_3_Due_Date__c</fullName>
    <description>~USCDI v1 CCDA - Goals Section (UPDATED!)</description>
    <label>Goal Section 3 Due Date</label>
    <type>Date</type>
</CustomField>