force-app/main/default/objects/USCDI__c/fields/H_P_3__c.field-meta.xml
<CustomField>
    <fullName>H_P_3__c</fullName>
    <description>~USCDI v1 CCDA - H &amp; P</description>
    <label>H &amp; P 3</label>
    <type>TextArea</type>
</CustomField>