force-app/main/default/objects/USCDI__c/fields/Head_Occipital_Frontal_Circumference__c.field-meta.xml
<CustomField>
    <fullName>Head_Occipital_Frontal_Circumference__c</fullName>
    <description>~USCDI v1 CCDA - Pediatric Percentiles (NEW!)</description>
    <label>Head Occipital Frontal Circumference (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>