force-app/main/default/objects/USCDI__c/fields/Inhaled_oxygen_concentration__c.field-meta.xml
<CustomField>
    <fullName>Inhaled_oxygen_concentration__c</fullName>
    <description>~USCDI v1 CCDA - Pulse Oximetry (NEW!)</description>
    <label>Inhaled oxygen concentration</label>
    <type>TextArea</type>
</CustomField>