force-app/main/default/objects/USCDI__c/fields/Inhaled_oxygen_flow_rate__c.field-meta.xml
<CustomField>
    <fullName>Inhaled_oxygen_flow_rate__c</fullName>
    <description>~USCDI v1 CCDA - Pulse Oximetry (NEW!)</description>
    <label>Inhaled oxygen flow rate</label>
    <type>TextArea</type>
</CustomField>