force-app/main/default/objects/USCDI__c/fields/Laboratory_Notes_1__c.field-meta.xml
<CustomField>
    <fullName>Laboratory_Notes_1__c</fullName>
    <description>~USCDI v1 CCDA - Laboratory Notes (NEW!)</description>
    <label>Laboratory Notes 1</label>
    <type>TextArea</type>
</CustomField>