force-app/main/default/objects/USCDI__c/fields/Laboratory_Reports_Narrative_NEW__c.field-meta.xml
<CustomField>
    <fullName>Laboratory_Reports_Narrative_NEW__c</fullName>
    <description>~USCDI v1 CCDA - Laboratory Reports Narrative (NEW!)</description>
    <inlineHelpText>Summarize the Laboratory Reports that are present in this EMΝ.</inlineHelpText>
    <label>Laboratory Reports Narrative (NEW!)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>