force-app/main/default/objects/USCDI__c/fields/Oxygen_saturation__c.field-meta.xml
<CustomField>
    <fullName>Oxygen_saturation__c</fullName>
    <description>~USCDI v1 CCDA - Pulse Oximetry (NEW!)</description>
    <label>Oxygen saturation</label>
    <type>TextArea</type>
</CustomField>