force-app/main/default/objects/USCDI__c/fields/Pathology_Report_2__c.field-meta.xml
<CustomField>
    <fullName>Pathology_Report_2__c</fullName>
    <description>~USCDI v1 CCDA - Pathology Report (NEW!)</description>
    <label>Pathology Report 2</label>
    <type>TextArea</type>
</CustomField>