force-app/main/default/objects/USCDI__c/fields/Pathology_Report_Narrative_NEW__c.field-meta.xml
<CustomField>
    <fullName>Pathology_Report_Narrative_NEW__c</fullName>
    <inlineHelpText>Break down the detail of the pathology report</inlineHelpText>
    <label>Pathology Report Narrative (NEW!)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>