force-app/main/default/objects/USCDI__c/fields/Procedure_Note_text_NEW__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Note_text_NEW__c</fullName>
    <description>~USCDI v1 CCDA - Procedure Note (text) (NEW!)</description>
    <label>Procedure Note (text) (NEW!)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>