force-app/main/default/objects/USCDI__c/fields/Procedure_Notes_2__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Notes_2__c</fullName>
    <description>~USCDI v1 CCDA - Procedure Notes</description>
    <label>Procedure Notes 2</label>
    <type>TextArea</type>
</CustomField>