force-app/main/default/objects/USCDI__c/fields/Progress_Note_3__c.field-meta.xml
<CustomField>
    <fullName>Progress_Note_3__c</fullName>
    <description>~USCDI v1 CCDA - Progress Note (NEW!)</description>
    <label>Progress Note 3</label>
    <type>TextArea</type>
</CustomField>