force-app/main/default/objects/USCDI__c/fields/Progress_Note_Text_NEW__c.field-meta.xml
<CustomField>
    <fullName>Progress_Note_Text_NEW__c</fullName>
    <description>~USCDI v1 CCDA - Progress Note (Text) (NEW!)</description>
    <label>Progress Note (Text) (NEW!)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>