force-app/main/default/objects/USCDI__c/fields/Respiratory_Rate__c.field-meta.xml
<CustomField>
    <fullName>Respiratory_Rate__c</fullName>
    <description>~USCDI v1 CCDA - Additional Vitals (UPDATED!)</description>
    <label>Respiratory Rate</label>
    <type>TextArea</type>
</CustomField>