force-app/main/default/objects/USCDI__c/fields/Smoking_Status__c.field-meta.xml
<CustomField>
    <fullName>Smoking_Status__c</fullName>
    <label>Smoking Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Current every day smoker</fullName>
            </value>
            <value>
                <fullName>Current some day smoker</fullName>
            </value>
            <value>
                <fullName>Former smoker</fullName>
            </value>
            <value>
                <fullName>Never smoker</fullName>
            </value>
            <value>
                <fullName>Smoker, current status unknown</fullName>
            </value>
            <value>
                <fullName>Unknown if ever smoked</fullName>
            </value>
            <value>
                <fullName>Heavy tobacco smoker</fullName>
            </value>
            <value>
                <fullName>Light tobacco smoker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>