force-app/main/default/objects/USCDI__c/fields/Smoking_Status_Cessation_Counseling__c.field-meta.xml
<CustomField>
    <fullName>Smoking_Status_Cessation_Counseling__c</fullName>
    <label>Smoking Status Cessation Counseling</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Smoking cessation education</fullName>
            </value>
            <value>
                <fullName>Smoking effects education</fullName>
            </value>
            <value>
                <fullName>Pregnancy smoking education</fullName>
            </value>
            <value>
                <fullName>Referral to stop-smoking clinic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>