force-app/main/default/objects/USCDI__c/fields/USCDI_v1_CCDA_Assessment_4__c.field-meta.xml
<CustomField>
    <fullName>USCDI_v1_CCDA_Assessment_4__c</fullName>
    <label>~USCDI v1 CCDA - Assessment 4</label>
    <type>TextArea</type>
</CustomField>