force-app/main/default/objects/USCDI__c/fields/USCDI_v1_CCDA_Cognitive_Status__c.field-meta.xml
<CustomField>
    <fullName>USCDI_v1_CCDA_Cognitive_Status__c</fullName>
    <label>~USCDI v1 CCDA - Cognitive Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No impairment</fullName>
            </value>
            <value>
                <fullName>Some impairment</fullName>
            </value>
            <value>
                <fullName>Detailed impairment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>